修改一下 让他能看见会动的东西

--- a/LearnChip8.vcxproj
+++ b/LearnChip8.vcxproj
@@ -157,6 +157,7 @@ ucrt.lib;SDL2.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies
     <ClCompile Include="emumem.cpp" />
     <ClCompile Include="emu.cpp" />
     <ClCompile Include="ppu.cpp" />
+    <ClCompile Include="timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bus.h" />
