--- a/LearnChip8.vcxproj.filters
+++ b/LearnChip8.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="bus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bus.h">
